--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <!-- Title -->
       <h1>Infinity Scroll</h1>
       <!-- Loader -->
-      <div class="loader" id="loader" hidden>
+      <div class="loader" id="loader">
           <img src="Infinity.svg" alt="loader">
       </div>
       <!-- Image Container -->
