--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <h1>Infinity Scroll</h1>
       <!-- Loader -->
       <div class="loader" id="loader">
-          <img src="Infinity.svg" alt="loader">
+          <img inline src="Infinity.svg" alt="loader">
       </div>
       <!-- Image Container -->
       <div class="image-container" id="image-container">
